# colourful-sound-bars

./: CMakeLists.txt  LICENSE  Makefile  README.md  fft.c  fft.h  sound_view.c  sound_view.h  wave.c  wave.h
